# ML-DS_project

./: README.md  pyproject.toml
src/spam_filter/: filter.py  spam_filter.ipynb
