[project]
name = "spam_filter"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Zischg Elias", email = "ze8907@mci4me.at"},
]
dependencies = ["numpy>=2.2.0", "scikit-learn>=1.5.2", "pandas>=2.2.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
